--- a/src/app/pages/main/main.html
+++ b/src/app/pages/main/main.html
@@ -1,6 +1,14 @@
-<section>
+<section class="test">
     == MAIN PAGE ==
 </section>
-<b>
-    {{main.name}}
-</b>
+
+<article class="f">
+    Some awesome text
+</article>
+
+<article class="ant">
+    Another awesome text
+</article>
+
+<section class="cat">
+</section>
