--- a/src/assets/styles/sass/index.sass
+++ b/src/assets/styles/sass/index.sass
@@ -1,2 +1,10 @@
+@import ./fonts
+
 body
   background: #eee
+  font-family: 'Amatic', sans-serif
+
+.cat
+  width: 600px
+  height: 400px
+  background-image: url("../../pics/cat.jpg")
