--- a/src/app/pages/main/main.html
+++ b/src/app/pages/main/main.html
@@ -2,13 +2,15 @@
     == MAIN PAGE ==
 </section>
 
-<article class="f">
-    Some awesome text
-</article>
+<section>
+    <b>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut doloremque eligendi, ipsum maxime nostrum?
 
-<article class="ant">
-    Another awesome text
-</article>
+    </b>
 
-<section class="cat">
+    <article class="n">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut doloremque eligendi, ipsum maxime nostrum?
+    </article>
+
 </section>
+
