--- a/src/app/pages/main/main.sass
+++ b/src/app/pages/main/main.sass
@@ -1,9 +1,4 @@
-.test
-  background: lightcyan
-
-.kitty
-  width: 500px
-  height: 500px
-
-.ant
-  font-family: 'Oswald'
+.cat
+  width: 600px
+  height: 400px
+  background-image: url("../../../assets/images/cat.jpg")
