--- a/src/assets/styles/sass/index.sass
+++ b/src/assets/styles/sass/index.sass
@@ -2,9 +2,5 @@
 
 body
   background: #eee
-  font-family: 'Amatic', sans-serif
+  font-family: 'PT Sans', 'sans-serif'
 
-.cat
-  width: 600px
-  height: 400px
-  background-image: url("../../pics/cat.jpg")
