--- a/src/assets/styles/sass/fonts.sass
+++ b/src/assets/styles/sass/fonts.sass
@@ -1,10 +1,9 @@
-=font ($font-name, $font-url, $font-format, $font-weight, $font-style)
+=font($font-name, $font-path, $font-weight)
   @font-face
     font-family: $font-name
-    src: url($font-url) format($font-format)
+    src: url($font-path)
     font-weight: $font-weight
-    font-style: $font-style
 
++font('PT Sans', '../../fonts/PT_Sans-Web-Regular.ttf', 400)
++font('PT Sans', '../../fonts/PT_Sans-Web-Bold.ttf', 700)
 
-+font('Oswald', '../../fonts/Oswald-Regular.ttf', 'truetype', 'normal', 'normal')
-+font('Amatic', '../../fonts/Amatic.ttf', 'truetype', 'normal', 'normal')
