--- a/src/app/pages/main/main.html
+++ b/src/app/pages/main/main.html
@@ -1,16 +1,7 @@
-<section class="test">
-    == MAIN PAGE ==
-</section>
+<main class="main-page">
+    <header>====MAIN SECTION====</header>
 
-<section>
-    <b>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut doloremque eligendi, ipsum maxime nostrum?
+    <main-header></main-header>
 
-    </b>
-
-    <article class="n">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut doloremque eligendi, ipsum maxime nostrum?
-    </article>
-
-</section>
+</main>
 
