--- a/src/app/pages/main/main.html
+++ b/src/app/pages/main/main.html
@@ -1,6 +1,10 @@
-<main class="main-page">
-    <header>====MAIN SECTION====</header>
-
-    <main-header></main-header>
-
+<main class="main-page container">
+    <!--<main-header></main-header>-->
+    <section class="row">
+        <div class="col">1</div>
+        <div class="col">2</div>
+        <div class="col">3</div>
+        <div class="col">4</div>
+        <div class="col">5</div>
+    </section>
 </main>
